--- a/src/assets/scss/header.scss
+++ b/src/assets/scss/header.scss
@@ -171,24 +171,82 @@
     display: none;
     position: fixed;
     z-index: 99;
-    right: 0;
+    left: 0;
     top: 0;
     height: 100vh;
-    text-align: center;
     background: white;
     padding: 10px;
 
     .section-nav-mobile {
-        padding: 10px;
+        padding: 5px 10px 10px 10px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        font-weight: bold;
+        letter-spacing: 1px;
+        .active-fa-chevron-right {
+            transition-duration: 0.2s;
+            transform: rotate(90deg);
+        }
+        .deactivate-fa-chevron-right {
+            transition-duration: 0.2s;
+            transform: rotate(0deg);
+        }
         a {
             text-decoration: none;
             color: black;
         }
-        img {
-            width: 100px;
+        .image {
+            width: 100%;
+            display: flex;
+            justify-content: center;
             border-bottom: 1px solid grey;
-            padding-bottom: 30px;
+            img {
+                width:70px;
+                padding-bottom: 20px;
+            }
         }
+    }
+    .sub-menu-kld0203 {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        display: flex;
+        flex-direction: column;
+        overflow: hidden;
+        opacity: 0;
+        max-height: 0; /* Giới hạn chiều cao ban đầu */
+        transition:
+            max-height 0.5s ease,
+            opacity 0.5s ease;
+        
+        li {
+            list-style-type: none;
+            padding: 10px;
+            .open-sub {
+                opacity: 1; /* Hiển thị khi mở */
+                max-height: 500px; /* Chiều cao tối đa cho menu khi mở */
+                overflow-y: auto;
+            }
+        }
+        button,
+        a {
+            cursor: pointer;
+            text-decoration: none;
+            background-color: unset;
+            color: black;
+            border: none;
+            padding: 0 10px;
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+        }
+    }
+
+    .open {
+        opacity: 1; /* Hiển thị khi mở */
+        max-height: 550px; /* Chiều cao tối đa cho menu khi mở */
+        overflow-y: auto;
     }
 }
 .section-nav-mobile-box.active {
@@ -268,7 +326,8 @@
         opacity: 0;
         max-height: 0;
         overflow: hidden;
-        transition: opacity 0.3s ease-in-out, max-height 0.5s ease-in-out;
+        transition:
+            opacity 0.3s ease-in-out,
+            max-height 0.5s ease-in-out;
     }
-    
 }
